<resources>
    <string name="app_name">TwKotlin</string>

    <!--concats the day and the month corresponding to a date, e.g. 31 January-->
    <string name="date_filter_day_month">%s %s</string>

    <string name="date_filter_today">Today</string>
    <string name="date_filter_tomorrow">Tomorrow</string>
    <string name="date_filter_next_three_days">Next 3 days</string>
    <string name="date_filter_any_time">Any time</string>
    <string name="date_filter_any_day">Any day</string>
    <string name="date_filter_choose_day">Choose day...</string>
    <string name="date_filter_apply_button">Apply</string>
    <string name="date_filter_date_label">Date</string>
    <string name="date_filter_time_label">Time</string>
    <string name="bottom_sheet_sort">Sort</string>
    <string name="bottom_sheet_recommended">Recommended</string>
    <string name="bottom_sheet_max_price">Max. Price</string>
    <string name="bottom_sheet_any_price">Any Price</string>
    <string name="bottom_sheet_min_rating">Min. Rating</string>
    <string name="bottom_sheet_off_peak">Only off peak and last minute discounts</string>
    <string name="bottom_sheet_top_rated">Only Top Rated venues</string>
    <string name="bottom_sheet_apply_filters_button">Apply filters</string>
    <string name="review_count_label">%s reviews</string>


</resources>
