<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="340dp"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <TextView
            android:id="@+id/sort_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:drawableStart="@drawable/ic_swap_vert_black_24dp"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/bottom_sheet_sort"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignWithParentIfMissing="true"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/clear_sort_type"
            android:text="@string/bottom_sheet_recommended" />

        <ImageView
            android:id="@+id/clear_sort_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="5dp"

            android:src="@drawable/ic_clear_black_12dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <TextView
            android:id="@+id/max_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:drawableStart="@drawable/ic_euro_symbol_black_24dp"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/bottom_sheet_max_price"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignWithParentIfMissing="true"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/clear_max_price"
            android:drawablePadding="10dp"
            android:text="@string/bottom_sheet_any_price" />

        <ImageView
            android:id="@+id/clear_max_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="5dp"
            android:src="@drawable/ic_clear_black_12dp" />
    </RelativeLayout>

    <SeekBar
        android:id="@+id/seekbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <TextView
            android:id="@+id/min_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/min_rating_widget"
            android:drawableStart="@drawable/ic_star_border_black_24dp"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/bottom_sheet_min_rating"
            android:textSize="15sp" />

        <!--hack alert -> negative right margin-->
        <RatingBar
            android:id="@+id/min_rating_widget"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignWithParentIfMissing="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="-60dp"
            android:layout_toStartOf="@+id/clear_star_rating"
            android:rating="4"
            android:scaleX=".5"
            android:scaleY=".5"
            android:stepSize="1"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/clear_star_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="5dp"
            android:src="@drawable/ic_clear_black_12dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/off_peak_switch_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/off_peak_switch_toggle"
            android:drawableStart="@drawable/ic_euro_symbol_black_24dp"
            android:drawablePadding="10dp"
            android:text="@string/bottom_sheet_off_peak"
            android:textSize="15sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/off_peak_switch_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/top_rated_switch_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/top_rated_toggle"
            android:drawableStart="@drawable/ic_euro_symbol_black_24dp"
            android:drawablePadding="10dp"
            android:text="@string/bottom_sheet_top_rated"
            android:textSize="15sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/top_rated_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <Button
        android:id="@+id/apply_date_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="10dp"
        android:background="@drawable/border_drawable"
        android:backgroundTint="#FF0000"
        android:foreground="@drawable/ripple"
        android:text="@string/bottom_sheet_apply_filters_button"
        android:textAllCaps="false"
        android:textColor="#FFFFFF" />
</LinearLayout>